# venom

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  Dockerfile.multi  HARDENING.md  PHASES_COMPLETE.md  PRODUCTION_READINESS.md  README.md  SECURITY.md  clippy.toml  docker-compose.yml  install.sh  rustfmt.toml
.cargo/: config.toml
.github/workflows/: deploy.yml  publish.yml  release.yml  security.yml  tests.yml  web.yml
.venom/: ca.crt  ca.key  history.db
.venom/certs/: example.com.crt  example.com.key
.venom/loadtest/: bench-baseline.lua  bench-baseline.sh  benchmark-baseline.sh  docker-compose.yml  prometheus.yml
benches/: benchmarks.rs
crates/venom-api/: Cargo.toml
crates/venom-api/src/: lib.rs
crates/venom-cli/: Cargo.toml
crates/venom-cli/src/: main.rs
crates/venom-core/: Cargo.toml
crates/venom-core/src/: config.rs  error.rs  lib.rs  models.rs
crates/venom-proxy/: Cargo.toml
crates/venom-proxy/src/: lib.rs  mitm.rs
crates/venom-scanner/: Cargo.toml
crates/venom-scanner/src/: adaptive.rs  advanced_detection.rs  anomaly.rs  api.rs  api_gateway.rs  auth.rs  cache.rs  compliance.rs  config.rs  config_loader.rs  context.rs  dashboard.rs  distributed.rs  error.rs  event_bus.rs  lib.rs  logging.rs  lua_engine.rs  metrics.rs  ml.rs  monitoring.rs  persistence.rs  plugin.rs  post_exploitation.rs  realtime.rs  reporting.rs  runner.rs  threat_intelligence.rs  waf.rs
crates/venom-scanner/src/adaptive/: mod.rs  payloads.rs  scoring.rs  strategy.rs
crates/venom-scanner/src/anomaly/: README.md  confidence.rs  mod.rs  rules.rs  statistics.rs
crates/venom-scanner/src/distributed/: README.md  heartbeat.rs  mod.rs  protocol.rs  queue.rs  result.rs  retry.rs  scheduler.rs  worker.rs
crates/venom-scanner/src/lua/: README.md  cache.rs  executor.rs  history.rs  loader.rs  mod.rs  registry.rs  sandbox.rs  types.rs
crates/venom-scanner/src/phases/: mod.rs  phase1_recon.rs  phase2_crawl.rs  phase3_fuzzer.rs  phase4_param.rs  phase5_sqli.rs  phase6_xss.rs  phase7_ssti.rs  phase8_lfi_xxe.rs  phase9_ssrf.rs
crates/venom-scanner/src/plugins/: lfi.rs  mod.rs  sqli.rs  ssrf.rs  ssti.rs  xss.rs  xxe.rs
crates/venom-scanner/tests/: advanced_detection_tests.rs  api_gateway_tests.rs  compliance_tests.rs  distributed_tests.rs  error_handling_tests.rs  event_lua_config_tests.rs  integration_tests.rs  ml_tests.rs  monitoring_tests.rs  performance_tests.rs  persistence_tests.rs  phase_specific_tests.rs  plugin_integration_tests.rs  post_exploitation_tests.rs  security_pattern_tests.rs  threat_intelligence_tests.rs
docs/: API.md  ARCHITECTURE.md  CODE_QUALITY.md  COMPLIANCE.md  CONTRIBUTING.md  DISTRIBUTION.md  GETTING_STARTED.md  INDEX.md  OBSERVABILITY.md  RELEASE.md  TESTING.md
examples/: config_usage.rs  error_handling.rs
helm/: Chart.yaml  values.yaml
k8s/: deployment.yaml  services.yaml
profiles/: README.md  aggressive.toml  cloud.toml  enterprise.toml  stealth.toml
scripts/: build-releases.sh  generate-metrics.sh
src/: error.rs  lib.rs  main.rs
src/advanced/: api_keys.rs  macro_library.rs  mod.rs  payload_templates.rs  sso.rs
src/api/: collab_handlers.rs  dashboard.html  handlers.rs  mod.rs  performance.rs  reporting_handlers.rs  scan_handlers.rs  server.rs  tasks.rs  websocket.rs
src/c2/: agents.rs  commands.rs  console.rs  mod.rs
src/cache/: cache_manager.rs  mod.rs  redis_cache.rs
src/cli/: commands.rs  completion.rs  executor.rs  mod.rs  output.rs  parser.rs  profiles.rs
src/collaboration/: mod.rs  permissions.rs  sharing.rs  team.rs
src/compliance/: gdpr.rs  hipaa.rs  mod.rs  reporting.rs  soc2.rs
src/database/: mod.rs  schema.rs
src/decoder/: codecs.rs  mod.rs
src/enterprise/: audit_logging.rs  backup_restore.rs  data_retention.rs  disaster_recovery.rs  mod.rs  rbac.rs  sla_monitoring.rs
src/integrations/: email.rs  external_tools.rs  mod.rs  slack.rs  webhooks.rs
src/intruder/: conditional.rs  fuzzer.rs  macros.rs  mod.rs  payloads.rs  response_analyzer.rs
src/loadtest/: benchmarks.rs  mod.rs  profiles.rs  reporter.rs
src/monitoring/: exporter.rs  metrics.rs  mod.rs  prometheus.rs
src/observability/: health.rs  logging.rs  metrics.rs  mod.rs  telemetry.rs  tracing.rs
src/performance/: benchmarking.rs  caching.rs  mod.rs  optimization.rs  profiling.rs
src/postexploit/: antiforensics.rs  c2.rs  evasion.rs  lateral.rs  mod.rs  persistence.rs  privesc.rs  rce.rs  reverseshell.rs  webshell.rs  zeroday.rs
src/proxy/: ca.rs  history.rs  http_parser.rs  interceptor.rs  mitm.rs  mod.rs  tls.rs  tls_server.rs
src/repeater/: mod.rs  request_builder.rs  response_handler.rs
src/reporting/: html_generator.rs  mod.rs  pdf_generator.rs  report.rs
src/scanner/: analyzer.rs  anomaly_detector.rs  api_scanner.rs  baseline.rs  behavioral_analyzer.rs  business_logic_fuzzer.rs  deserialization.rs  detector.rs  endpoint_fuzzer.rs  error_handling.rs  exploit_automation.rs  exploiter.rs  gadget_analyzer.rs  idor_detector.rs  infrastructure_scanner.rs  integration_tests.rs  ml_detection.rs  mod.rs  mutation.rs  oauth_jwt_breaker.rs  osint_reconnaissance.rs  parallel.rs  payloads.rs  performance_benchmark.rs  release_config.rs  scoring.rs  source_code_analyzer.rs  sqli_advanced.rs  sqli_expert.rs  sqli_payloads.rs  ssrf_detector.rs  ssti_expert.rs  test_fixtures.rs  threat_intelligence.rs  websocket_scanner.rs  xss_advanced.rs  xss_expert.rs  xss_payloads.rs
src/security/: audit.rs  encryption.rs  mod.rs  secrets.rs  threat_detection.rs  validation.rs
src/testing/: chaos.rs  ci_cd_tests.rs  compatibility_tests.rs  e2e_tests.rs  integration.rs  integration_tests.rs  mod.rs  performance_tests.rs  security_labs.rs  security_tests.rs  stress_testing.rs
src/zeroday_db/: exploit_db.rs  mod.rs  sources.rs  updater.rs
terraform/: main.tf  prod.tfvars  variables.tf
web/: README.md  package.json  tsconfig.json
web/public/: index.html
web/src/: App.css  App.tsx  index.css
web/src/components/: AuditLog.css  AuditLog.tsx  BackupsPanel.css  BackupsPanel.tsx  Dashboard.tsx  MetricsChart.css  (+7 more)
(+1 files in other folders)
