[package]
name = "venom"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
http = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "cookies", "rustls-tls"] }
rustls = "0.23"
rcgen = "0.12"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
async-trait = "0.1"
lazy_static = "1.4"
nom = "7"
base64 = "0.22"
hex = "0.4"
urlencoding = "2"
num_cpus = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
