[package]
name = "venom"
version = "0.5.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
http = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "cookies", "rustls-tls"] }
rustls = { version = "0.23", features = ["ring", "std"] }
rustls-pemfile = "2"
tokio-rustls = "0.26"
webpki-roots = "0.26"
rcgen = "0.12"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
async-trait = "0.1"
lazy_static = "1.4"
nom = "7"
base64 = "0.22"
hex = "0.4"
urlencoding = "2"
num_cpus = "1"
dirs = "5"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
futures = "0.3"
sha2 = "0.10"
html-escape = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
