[package]
name = "venom-proxy"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
venom-core = { path = "../venom-core" }
tokio = { workspace = true }
hyper = { workspace = true }
http = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
tokio-rustls = { workspace = true }
webpki-roots = { workspace = true }
rcgen = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[lib]
name = "venom_proxy"
path = "src/lib.rs"
