[package]
name = "venom-scanner"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
venom-core = { path = "../venom-core" }
tokio = { workspace = true }
reqwest = { workspace = true, features = ["json", "cookies"] }
async-trait = "0.1"
dashmap = "5.5"
url = "2.5"
regex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
memmap2 = { workspace = true }
nom = { workspace = true }

[lib]
name = "venom_scanner"
path = "src/lib.rs"
